css/style.css
/*
Colors used:
- Background Color (white): #FFFFFF;
- Header / Footer Color: #E6E6E6;
- Active Color: #404040
- Non-active Color: #BFBFBF
- Hover/Focus Color: #404040
-  Color:
- CTA Background Color:
- Header Color: #404040
- Text Color: #000000
*/
* {
  box-sizing: border-box;
}

body {
  background-color: #FFFFFF;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  font-weight: 300;
  line-height: 1.6;
  color: #000000;
}

footer {
  background-color: #E6E6E6;
}

h1, h2, h3, h4 {
  color: #404040;
  line-height: 1.4;
}

h1 {
  font-size: 1.75em;
  /* em means multiply by parent fontsize*/
  font-weight: 900;
}

h2 {
  font-size: 1.50em;
  font-weight: 700;
}

h3 {
  font-size: 1.05em;
  font-weight: 500;
}

h4 {
  font-size: 1.05em;
  font-weight: 500;
}

img {
  width: 100%;
}

header {
  text-align: center;
  padding: 10px;
  background-color: #ffffff;
  position: fixed;
  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.12);
}

nav {
  display: inline-block;
  width: 100%;
}

nav>ul {
  padding: 0px;
}

nav>ul>li {
  display: inline-block;
}

nav>ul>li>a {
  padding: 0 15px;
  text-transform: uppercase;
  font-weight: 500;
  color: #BFBFBF;
}

.logo {
  /*float: left;*/
  max-height: 100px;
}

.active {
  color: #404040;
}

.social svg {
  height: 20px;
}

main {
  padding-top: 150px;
}

a {
  color: #BFBFBF;
  background-color: transparent;
  text-align: center;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #404040;
}

a:active {
  color: #404040;
}

.container {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.button {
  display: inline-block;
  background-color: #BFBFBF;
  color: #000000 !important;
  /* overiding th e original link color */
  font-weight: 400;
  padding: 5px;
  border-radius: 10px;
  border: 5px solid #BFBFBF;
  /*width of border - type - color */
  transition-duration: 0.2s;
  transition-property: opacity;
}

.button:hover,
.button:focus {
  opacity: 0.8;
  /*80%*/
  text-decoration: none;
}

.button:active {
  opacity: 1.2;
}

.button.resume {
  display: inline-block;
  background-color: #BFBFBF;
  color: #000000 !important;
  /* overiding th e original link color */
  font-weight: 400;
  padding: 5px;
  border-radius: 10px;
  border: 5px solid #BFBFBF;
  /*width of border - type - color */
  transition: 0.2s opacity;
}

.button.resume:hover,
.button.resume:focus {
  opacity: 0.7;
  /*80%*/
  text-decoration: none;
}

.button.resume:active {
  opacity: 1.2;
}

.button.contact {
  background-color: transparent;
  border: none;
}

.button.contact:hover,
.button.contact:focus {
  opacity: 0.5;
}

.row {
  margin: 25px 0;
}
@keyframes color-change {
  0% {fill: #edc655;}
  50% {fill: #fcffad;}
  100% {fill: #f76414;}
}
@keyframes cloud-move {
  from {transform: translate(0,50px);}
  to {transform: translate(200px, 50px);}
}
@keyframes cloud-move-reverse {
  from {transform: translate(446px, 48px);}
  to {transform: translate(100px, 48px);}
}
.sun {
  animation: 4s color-change infinite alternate linear;
}
.cloud-front{
  animation: 30s cloud-move infinite alternate linear;
}
.cloud-back{
  animation: 34s cloud-move-reverse infinite alternate linear;
}
#work .row {
  padding-bottom: 25px;
  border-bottom: 1px solid #4a4a4a;
}

#hero {
  /*background-color: #ffe4c4;*/
  display: inline-block;
  width: 100%;
}

#hero h1 {
  text-align: center;
}

#contact h2 {
  padding-top: 20px;
}

#contact .container p {
  line-height: 1;
}
/* ===================================
Medium devices (640px and larger)
==================================== */
@media only screen and (min-width: 640px) {
  header {
    text-align: unset;
    padding: 20px 0 13px;
  }
  nav {
    width: auto;
    float: right;
    margin-top: 4px;
  }
  body {
    font-size: 18px;
  }
  #hero span {
    display: block;
  }
  .col-md-6 {
    width: 50%;
  }
  [class*="col-"] {
    float:left;
    padding: 10px;
  }
  .row::after {
    content: "";
    clear: both;
    display: table;
  }
  #about-page h3 {
    margin-top: 0;
  }
}
/* ===================================
Large devices (1024px and larger)
====================================*/
@media only screen and (min-width: 1024px) {
  .col-lg-5{
    width: 40%;
  }
  .col-lg-7{
    width: 60%;
  }
  body{
    font-size: 20px;
  }
}

/* ===================================
X-Large devices (1440px and larger)
====================================*/
@media only screen and (min-width: 1440px) {
}

